--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
-name: Run Telegram Bot 24/7
+name: Run and Monitor Telegram Bot 24/7
 
 on:
   push:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   run-bot:
@@ -15,5 +16,26 @@ jobs:
           python-version: '3.10'
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Run bot
-        run: python hosting_bot5.py
+      - name: Install tmux for process management
+        run: sudo apt-get install -y tmux
+      - name: Run bot in tmux session
+        run: |
+          SESSION_NAME="telegram_bot"
+          # Kill any existing session
+          tmux kill-session -t $SESSION_NAME 2>/dev/null || true
+          # Create new session and run the bot
+          tmux new-session -d -s $SESSION_NAME "python hosting_bot5.py"
+          # Keep checking if the bot is running
+          while true; do
+            if ! tmux has-session -t $SESSION_NAME 2>/dev/null; then
+              echo "Bot session not found. Restarting..."
+              tmux new-session -d -s $SESSION_NAME "python hosting_bot5.py"
+            else
+              if ! tmux send-keys -t $SESSION_NAME C-m 2>/dev/null; then
+                echo "Bot session dead. Restarting..."
+                tmux kill-session -t $SESSION_NAME 2>/dev/null || true
+                tmux new-session -d -s $SESSION_NAME "python hosting_bot5.py"
+              fi
+            fi
+            sleep 30
+          done
